# eclectic-projects

./: README.md
hello-website/: Main.hs.old  hello.cabal  stack.yaml
hello-website/.stack-work/install/x86_64-linux/lts-13.0/8.6.3/flag-cache/: Cabal-2.4.1.0-IaB5GUEm19R82R9cEdbB1D  HTTP-4000.3.12-Li8JQTobINq3DEyWOsHOuK  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  base-orphans-0.8-9c3aMxqS7QbGl4Ot5i8lwK  base16-bytestring-0.1.1.6-17atVnUhDnM13pAkKbwL6I  base64-bytestring-1.0.0.2-9zRsxWrEm5zGbLjNlDas  blaze-builder-0.4.1.0-KrFxFv3kgua3BTNMsMBadC  blaze-html-0.9.1.1-E0enfQtU1ZTDNQ8G8pIpJp  blaze-markup-0.8.2.2-IwLwNWRUxfsEuYbkQ0Gv5Q  cabal-install-2.4.1.0  cryptohash-sha256-0.11.101.0-4hEdGCusAXMBLiu8h413L1  digest-0.0.1.2-93hmxvQ2VB3FeV97QkdTpW  echo-0.1.3-13B4dlYRuV48K7glAqfTgb  ed25519-0.0.5.0-JRZm9qkjuKdJzhMNs9MSTR  edit-distance-0.2.2.1-4bW3W2hnyAoDkdg1hZrDEh  exceptions-0.10.0-7rupAzx2MQN9ks4RM1dl12  extensible-exceptions-0.1.1.4-KI0dG6kQM84KnSzvR2Yb0  hackage-security-0.5.3.0-JwIcTLJ50C4j3ceSYc3Un  happstack-server-7.5.1.3-DIuSqFk6twNLaeWWHBwss0  hashable-1.2.7.0-CWI8VZuQTAYWIQTQQtqCV  hslogger-1.2.12-Av0mDMwr8V14YtD057VSfW  html-1.0.1.2-23NOv2EcnHy3biHspV2LAZ  monad-control-1.0.2.3-9EdNo0Je3XxJkzGfiKIVvF  network-2.8.0.0-AkCJm1aNSYz7ekXKYyI0pF  network-uri-2.6.1.0-K75fCYvLQE41EntOQ30cqK  old-locale-1.0.0.7-D4Rn5zPhtMJBwwirPJNu78  old-time-1.1.0.3-2XkcGgLYS3G4Bt8PCBG9iL  random-1.1-3ypV4EIycgb35PKjTYYr5q  semigroups-0.18.5-6T2lH5F6zyQIdwR3JYKMO3  sendfile-0.7.9-6ejuSaYiqaaF4uJa6NpNQq  syb-0.7-KRW1LCxdMiCJrmhxCvzo37  system-filepath-0.4.14-FRUtJu5zAWTG9MKrRBz8D6  tar-0.5.1.0-GcqFpTqelp4Lmy6ZbjHbS7  threads-0.5.1.6-Jgj7ar6lHUZCMU0QPqs4qO  zip-archive-0.4-9iTOGZjCQx4JoyW5Pw5rKm  (+5 more)
hello-website/src/: Main.hs  README.md  README.md~
hs/hpfp/chap13/hangman/: hangman.cabal
hs/hpfp/chap13/hangman/src/: Main.hs
(+1185 files in other folders)
