name:                hello
version:             0.1.0.0
synopsis:            Simple web app
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Tollefson
maintainer:          example@email.com
copyright:           2019, Luke Tollefson
category:            Web
build-type:          Simple
cabal-version:       >=1.6

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , happstack-server
                     , blaze-html
                     , blaze-markup
--                   , hello

-- library
--  hs-source-dirs:      src
--  exposed-modules:     DogsRule
--                     , Hello
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010
                     
